--- a/lib/web/templates/admin/user/edit.html.eex
+++ b/lib/web/templates/admin/user/edit.html.eex
@@ -17,7 +17,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-10 col-md-offset-1">
       <%= render "_form.html", path: user_path(@conn, :update, @user.id), changeset: @changeset, title: "Edit", submit: "Update" %>
     </div>
   </div>
