--- a/lib/web/templates/admin/config/_game_name_form.html.eex
+++ b/lib/web/templates/admin/config/_game_name_form.html.eex
@@ -1,7 +1,1 @@
-<div class="form-group">
-  <%= label @f, :value, class: "col-md-4" %>
-  <div class="col-md-8">
-    <%= text_input @f, :value, class: "form-control" %>
-    <%= error_tag @f, :value %>
-  </div>
-</div>
+<%= FormView.text_field(@f, :value) %>
