--- a/lib/web/templates/admin/item_aspect/_form.html.eex
+++ b/lib/web/templates/admin/item_aspect/_form.html.eex
@@ -13,42 +13,20 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <%= label f, :name, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= text_input f, :name, class: "form-control" %>
-          <%= error_tag f, :name %>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :name) %>
 
-      <div class="form-group">
-        <%= label f, :description, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :description, class: "form-control" %>
-          <%= error_tag f, :description %>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :description) %>
 
-      <div class="form-group">
-        <%= label f, :stats, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :stats, value: @changeset |> json_field(:stats), class: "form-control", rows: 5 %>
-          <%= error_tag f, :stats %>
-          <span class="help-block">Enter in valid JSON</span>
-          <span class="help-block">Valid slots are: <%= Stats.slots() |> Enum.join(", ") %></span>
-          <%= render(SharedView, "_stats.html", stats_id: "item_aspect_stats", type_id: "item_aspect_type") %>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :stats, value: @changeset |> json_field(:stats), rows: 5) do %>
+        <span class="help-block">Enter in valid JSON</span>
+        <span class="help-block">Valid slots are: <%= Stats.slots() |> Enum.join(", ") %></span>
+        <%= render(SharedView, "_stats.html", stats_id: "item_aspect_stats", type_id: "item_aspect_type") %>
+      <% end %>
 
-      <div class="form-group">
-        <%= label f, :effects, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :effects, value: @changeset |> json_field(:effects), class: "form-control", rows: 15 %>
-          <%= error_tag f, :effects %>
-          <span class="help-block">Enter in valid JSON</span>
-          <%= render(SharedView, "_effects.html", id: "item_aspect_effects") %>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :stats, value: @changeset |> json_field(:effects), rows: 15) do %>
+        <span class="help-block">Enter in valid JSON</span>
+        <%= render(SharedView, "_effects.html", id: "item_aspect_effects") %>
+      <% end %>
     </div>
 
     <div class="box-footer">
