--- a/lib/web/templates/admin/quest/_form.html.eex
+++ b/lib/web/templates/admin/quest/_form.html.eex
@@ -4,22 +4,11 @@
       <h4>Basics</h4>
       <hr />
 
-      <div class="form-group">
-        <%= label f, :level, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= number_input f, :level, class: "form-control" %>
-          <%= error_tag f, :level %>
-          <span class="help-block"><%= Web.Help.get("quest.level") %></span>
-        </div>
-      </div>
+      <%= FormView.number_field(f, :level) do %>
+        <span class="help-block"><%= Web.Help.get("quest.level") %></span>
+      <% end %>
 
-      <div class="form-group">
-        <%= label f, :name, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= text_input f, :name, class: "form-control" %>
-          <%= error_tag f, :name %>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :name) %>
 
       <div class="form-group">
         <%= label f, :giver_id, class: "col-md-4" %>
@@ -30,52 +19,26 @@
         </div>
       </div>
 
-      <div class="form-group">
-        <%= label f, :experience, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= number_input f, :experience, class: "form-control" %>
-          <%= error_tag f, :experience %>
-        </div>
-      </div>
+      <%= FormView.number_field(f, :experience) %>
 
-      <div class="form-group">
-        <%= label f, :currency, currency() |> String.capitalize(), class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= number_input f, :currency, class: "form-control" %>
-          <%= error_tag f, :currency %>
-          <span class="help-block">The amount of <%= currency() %> the player will receive on completion</span>
-        </div>
-      </div>
+      <%= FormView.number_field(f, :currency, label: String.capitalize(currency())) do %>
+        <span class="help-block">The amount of <%= currency() %> the player will receive on completion</span>
+      <% end %>
 
       <h4>Descriptive</h4>
       <hr />
 
-      <div class="form-group">
-        <%= label f, :description, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :description, class: "form-control", rows: 5 %>
-          <%= error_tag f, :description %>
-          <span class="help-block"><%= Help.get("quest.description") %></span>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :description, rows: 5) do %>
+        <span class="help-block"><%= Help.get("quest.description") %></span>
+      <% end %>
 
-      <div class="form-group">
-        <%= label f, :completed_message, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :completed_message, class: "form-control", rows: 5 %>
-          <%= error_tag f, :completed_message %>
-          <span class="help-block"><%= Help.get("quest.completed_message") %></span>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :completed_message, rows: 5) do %>
+        <span class="help-block"><%= Help.get("quest.completed_message") %></span>
+      <% end %>
 
-      <div class="form-group">
-        <%= label f, :script, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :script, value: @changeset |> script(), class: "form-control", rows: 15 %>
-          <%= error_tag f, :script %>
-          <span class="help-block">Enter in valid JSON</span>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :script, value: @changeset |> script(), rows: 15) do %>
+        <span class="help-block">Enter in valid JSON</span>
+      <% end %>
     </div>
 
     <div class="box-footer">
