--- a/lib/web/templates/admin/quest_step/_item_give.html.eex
+++ b/lib/web/templates/admin/quest_step/_item_give.html.eex
@@ -1,10 +1,4 @@
-<div class="form-group">
-  <%= label @f, :count, class: "col-md-4" %>
-  <div class="col-md-8">
-    <%= number_input @f, :count, class: "form-control" %>
-    <%= error_tag @f, :count %>
-  </div>
-</div>
+<%= FormView.number_field(@f, :count) %>
 
 <div class="form-group">
   <%= label @f, :item_id, class: "col-md-4" %>
