--- a/lib/web/templates/admin/race/_form.html.eex
+++ b/lib/web/templates/admin/race/_form.html.eex
@@ -5,29 +5,9 @@
 
   <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
-      <div class="form-group">
-        <%= label f, :name, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= text_input f, :name, class: "form-control" %>
-          <%= error_tag f, :name %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= label f, :description, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :description, class: "form-control" %>
-          <%= error_tag f, :description %>
-        </div>
-      </div>
-
-      <div class="form-group">
-        <%= label f, :starting_stats, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :starting_stats, value: @changeset |> starting_stats(), class: "form-control", rows: 13 %>
-          <%= error_tag f, :starting_stats %>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :name) %>
+      <%= FormView.textarea_field(f, :description) %>
+      <%= FormView.textarea_field(f, :starting_stats, value: @changeset |> starting_stats(), rows: 13) %>
     </div>
 
     <div class="box-footer">
