--- a/lib/web/templates/admin/shop/_form.html.eex
+++ b/lib/web/templates/admin/shop/_form.html.eex
@@ -5,13 +5,7 @@
 
   <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
-      <div class="form-group">
-        <%= label f, :name, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= text_input f, :name, class: "form-control" %>
-          <%= error_tag f, :name %>
-        </div>
-      </div>
+      <%= FormView.text_input(f, :name) %>
     </div>
 
     <div class="box-footer">
