--- a/lib/web/templates/admin/social/_form.html.eex
+++ b/lib/web/templates/admin/social/_form.html.eex
@@ -5,40 +5,19 @@
 
   <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
-      <div class="form-group">
-        <%= label f, :name, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= text_input f, :name, class: "form-control" %>
-          <%= error_tag f, :name %>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :name) %>
 
-      <div class="form-group">
-        <%= label f, :command, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= text_input f, :command, class: "form-control" %>
-          <%= error_tag f, :command %>
-          <span class="help-block"><%= Help.get("social.command") %></span>
-        </div>
-      </div>
+      <%= FormView.text_field(f, :command) do %>
+        <span class="help-block"><%= Help.get("social.command") %></span>
+      <% end %>
 
-      <div class="form-group">
-        <%= label f, :with_target, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :with_target, class: "form-control", rows: 2 %>
-          <%= error_tag f, :with_target %>
-          <span class="help-block"><%= Help.get("social.with_target") %></span>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :with_target, rows: 2) do %>
+        <span class="help-block"><%= Help.get("social.with_target") %></span>
+      <% end %>
 
-      <div class="form-group">
-        <%= label f, :without_target, class: "col-md-4" %>
-        <div class="col-md-8">
-          <%= textarea f, :without_target, class: "form-control", rows: 2 %>
-          <%= error_tag f, :without_target %>
-          <span class="help-block"><%= Help.get("social.without_target") %></span>
-        </div>
-      </div>
+      <%= FormView.textarea_field(f, :without_target, rows: 2) do %>
+        <span class="help-block"><%= Help.get("social.without_target") %></span>
+      <% end %>
     </div>
 
     <div class="box-footer">
