--- a/lib/web/templates/admin/user/_form.html.eex
+++ b/lib/web/templates/admin/user/_form.html.eex
@@ -1,25 +1,17 @@
-<div class="box">
+<div class="box box-primary">
   <div class="box-header">
     <h3 class="box-title"><%= @title %></h3>
   </div>
 
-  <%= form_for @changeset, @path, fn (f) -> %>
+  <%= form_for @changeset, @path, [class: "form-horizontal"], fn (f) -> %>
     <div class="box-body">
-      <div class="form-group">
-        <%= label f, :name %>
-        <%= text_input f, :name, class: "form-control" %>
-        <%= error_tag f, :name %>
-      </div>
+      <%= FormView.text_field(f, :name) %>
+
+      <%= FormView.text_field(f, :email) %>
 
       <div class="form-group">
-        <%= label f, :email %>
-        <%= text_input f, :email, class: "form-control" %>
-        <%= error_tag f, :email %>
-      </div>
-
-      <div class="form-group">
-        <%= label f, :flags %>
-        <ul>
+        <%= label f, :flags, class: "col-md-4" %>
+        <ul class="col-md-8">
           <%= Enum.map(User.flags(), fn flag -> %>
             <li class="checkbox">
               <label>
@@ -32,15 +24,11 @@
         <%= error_tag f, :flags %>
       </div>
 
-      <div class="form-group">
-        <%= label f, :notes %>
-        <%= textarea f, :notes, class: "form-control", rows: 5 %>
-        <%= error_tag f, :notes %>
-      </div>
+      <%= FormView.textarea_field(f, :notes, rows: 5) %>
     </div>
 
     <div class="box-footer">
-      <%= submit @submit, class: "btn btn-primary" %>
+      <%= submit @submit, class: "btn btn-primary pull-right" %>
     </div>
   <% end %>
 </div>
