--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -16,7 +16,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="box box-primary">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
@@ -97,72 +97,74 @@
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-md-12">
-      <div class="box">
-        <div class="box-header">
-          <h3 class="box-title">Item Aspects</h3>
-          <div class="box-tools">
-            <%= link("Add Aspect", to: item_aspecting_path(@conn, :new, @item.id), class: "btn btn-primary") %>
+    <div class="col-md-6">
+      <div class="row">
+        <div class="col-md-12">
+          <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">Item Aspects</h3>
+              <div class="box-tools">
+                <%= link("Add Aspect", to: item_aspecting_path(@conn, :new, @item.id), class: "btn btn-primary") %>
+              </div>
+            </div>
+            <div class="box-body">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th>ID</th>
+                    <th>Name</th>
+                    <th>Actions</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <%= Enum.map(@item.item_aspectings, fn (item_aspecting) -> %>
+                    <tr>
+                      <td><%= item_aspecting.id %></td>
+                      <td><%= link(item_aspecting.item_aspect.name, to: item_aspect_path(@conn, :show, item_aspecting.item_aspect_id)) %></td>
+                      <td>
+                        <%= link(to: item_aspecting_path(@conn, :delete, item_aspecting.id), method: :delete, class: "btn btn-default btn-xs") do %>
+                          <i class="fa fa-times"></i>
+                        <% end %>
+                      </td>
+                    </tr>
+                  <% end) %>
+                </tbody>
+              </table>
+            </div>
           </div>
         </div>
-        <div class="box-body">
-          <table class="table">
-            <thead>
-              <tr>
-                <th>ID</th>
-                <th>Name</th>
-                <th>Actions</th>
-              </tr>
-            </thead>
-            <tbody>
-              <%= Enum.map(@item.item_aspectings, fn (item_aspecting) -> %>
-                <tr>
-                  <td><%= item_aspecting.id %></td>
-                  <td><%= link(item_aspecting.item_aspect.name, to: item_aspect_path(@conn, :show, item_aspecting.item_aspect_id)) %></td>
-                  <td>
-                    <%= link(to: item_aspecting_path(@conn, :delete, item_aspecting.id), method: :delete, class: "btn btn-default btn-xs") do %>
-                      <i class="fa fa-times"></i>
-                    <% end %>
-                  </td>
-                </tr>
-              <% end) %>
-            </tbody>
-          </table>
+      </div>
+
+      <div class="row">
+        <div class="col-md-12">
+          <div class="box box-success">
+            <div class="box-header">
+              <h3 class="box-title">Compiled Item</h3>
+            </div>
+            <div class="box-body">
+              <table class="table">
+                <tbody>
+                  <tr>
+                    <th>Stats</th>
+                    <td><pre><%= @compiled_item |> json_field(:stats) %></pre></td>
+                  </tr>
+                  <tr>
+                    <th>Effects</th>
+                    <td><pre><%= @compiled_item |> json_field(:effects) %></pre></td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-12">
-      <div class="box">
-        <div class="box-header">
-          <h3 class="box-title">Compiled Item</h3>
-        </div>
-        <div class="box-body">
-          <table class="table">
-            <tbody>
-              <tr>
-                <th>Stats</th>
-                <td><pre><%= @compiled_item |> json_field(:stats) %></pre></td>
-              </tr>
-              <tr>
-                <th>Effects</th>
-                <td><pre><%= @compiled_item |> json_field(:effects) %></pre></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <%= if length(@item.npc_items) > 0 do %>
-    <div class="row">
-      <div class="col-md-12">
+    <%= if length(@item.npc_items) > 0 do %>
+      <div class="col-md-6">
         <div class="box">
           <div class="box-header">
             <h3 class="box-title">NPCs</h3>
@@ -191,12 +193,10 @@
           </div>
         </div>
       </div>
-    </div>
-  <% end %>
+    <% end %>
 
-  <%= if length(@item.shop_items) > 0 do %>
-    <div class="row">
-      <div class="col-md-12">
+    <%= if length(@item.shop_items) > 0 do %>
+      <div class="col-md-6">
         <div class="box">
           <div class="box-header">
             <h3 class="box-title">Shops</h3>
